Added stuff for package

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,14 @@
 name = "page_size"
 version = "0.1.0"
 authors = ["Philip Woods <elzairthesorcerer@gmail.com>"]
+description = "Provides an easy, fast, cross-platform way to retrieve the memory page size"
+readme = "README.md"
+license = "MIT/Apache-2.0"
+documentation = "https://docs.rs/core_affinity/"
+homepage = "https://github.com/Elzair/page_size_rs"
+repository = "https://github.com/Elzair/page_size_rs"
+keywords = ["page", "memory", "ram", "page_size"]
+categories = ["hardware-support", "os"]
 
 [features]
 no-std = ["spin"]
