--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ documentation = "https://docs.rs/page_size/"
 homepage = "https://github.com/Elzair/page_size_rs"
 repository = "https://github.com/Elzair/page_size_rs"
 keywords = ["page", "memory", "ram", "page_size"]
-categories = ["hardware-support", "os"]
+categories = ["os"]
 
 [features]
 no_std = ["spin"]
