--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,31 +1,31 @@
 environment:
   matrix:
-    - TARGET: x86_64-pc-windows-gnu
+    - TARGET: i686-pc-windows-gnu
       CHANNEL: stable
     - TARGET: x86_64-pc-windows-gnu
       CHANNEL: stable
 
-    - TARGET: x86_64-pc-windows-gnu
+    - TARGET: i686-pc-windows-gnu
       CHANNEL: beta
     - TARGET: x86_64-pc-windows-gnu
       CHANNEL: beta
 
-    - TARGET: x86_64-pc-windows-gnu
+    - TARGET: i686-pc-windows-gnu
       CHANNEL: nightly
     - TARGET: x86_64-pc-windows-gnu
       CHANNEL: nightly
 
-    - TARGET: x86_64-pc-windows-msvc
+    - TARGET: i686-pc-windows-msvc
       CHANNEL: stable
     - TARGET: x86_64-pc-windows-msvc
       CHANNEL: stable
 
-    - TARGET: x86_64-pc-windows-msvc
+    - TARGET: i686-pc-windows-msvc
       CHANNEL: beta
     - TARGET: x86_64-pc-windows-msvc
       CHANNEL: beta
 
-    - TARGET: x86_64-pc-windows-msvc
+    - TARGET: i686-pc-windows-msvc
       CHANNEL: nightly
     - TARGET: x86_64-pc-windows-msvc
       CHANNEL: nightly
