--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,11 +19,10 @@ appveyor = { repository = "Elzair/page_size_rs" }
 no_std = ["spin"]
 
 [dependencies]
-spin = { version = "^0.4.5", optional = true }
+spin = { version = "0.5.2", optional = true }
 
 [target.'cfg(unix)'.dependencies]
 libc = "0.2"
 
 [target.'cfg(windows)'.dependencies]
-winapi = "0.2"
-kernel32-sys = "0.2"
+winapi = { version = "0.3.8", features = ["sysinfoapi"] }
