--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ homepage = "https://github.com/Elzair/page_size_rs"
 repository = "https://github.com/Elzair/page_size_rs"
 keywords = ["page", "memory", "ram", "page_size"]
 categories = ["os"]
+# edition = "2021"
 
 [badges]
 travis-ci = { repository = "Elzair/page_size_rs" }
@@ -20,6 +21,9 @@ no_std = ["spin"]
 
 [dependencies]
 spin = { version = "0.5.2", optional = true }
+
+[dev-dependencies]
+wasm-bindgen-test = "0.3.29"
 
 [target.'cfg(unix)'.dependencies]
 libc = "0.2"
