--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ homepage = "https://github.com/Elzair/page_size_rs"
 repository = "https://github.com/Elzair/page_size_rs"
 keywords = ["page", "memory", "ram", "page_size"]
 categories = ["os"]
-# edition = "2021"
+edition = "2018"
 
 [badges]
 travis-ci = { repository = "Elzair/page_size_rs" }
